BUG# 12123

Made change to mysqlimport to set character_set_database to binary to 
make importing various charsets/columns work correctly.